--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
+        "arcanedev/log-viewer": "~3.0",
         "overtrue/laravel-lang": "~3.0"
     },
     "require-dev": {
